--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Skranji" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -7,8 +7,19 @@
     
     <div class="bg">
         <div class="container">
-            <h1>Harry Potter Word Game</h1>
-            <p> Try and guess the word!</p>
+            <img class="Harry" src="./assets/images/HarryPotterLogo.png">
+            <h1>and the Magical Word</h1>
+            <p> Press any key to get started!</p>
+            <p>Current Word</p>
+            <p>Number of Wins: </p>
+            <p>Number of Guesses Remaining</p>
+            <p>Letters Already Guessed:</p>
         </div>
     </div>
+
+    <audio controls autoplay loop>
+        <source src="./assets/music/19 - Hedwig's Theme.mp3" type="audio/mpeg">
+    </audio>
+
+    <script src="./assets/javascript/game.js"></script>
 </body>
