adding link for gitpages

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Skranji" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -10,10 +11,16 @@
             <img class="Harry" src="./assets/images/HarryPotterLogo.png">
             <h1>and the Magical Word</h1>
             <p> Press any key to get started!</p>
-            <p>Current Word</p>
-            <p>Number of Wins: </p>
-            <p>Number of Guesses Remaining</p>
-            <p>Letters Already Guessed:</p>
+            <p>Current Word:
+            <span id="currentWord"> will be pulled</span></p>
+            <p>Number of Wins:
+            <span id="winNumber"> will be pulled </span></p>
+
+            <p>Guesses Left:
+            <span id="winNumber"> will be pulled </span></p>
+            
+            <p>Previous Guesses:
+            <span id="previousGuessed">will be pulled</span></p>
         </div>
     </div>
 
