--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
             <h1>and the Magical Word</h1>
             <p> Press any key to get started!</p>
             <p>Current Word:
-            <span id="currentWord"> will be pulled</span></p>
+            <span id="answerArray"> will be pulled</span></p>
             <p>Number of Wins:
             <span id="winNumber"> will be pulled </span></p>
 
             <p>Guesses Left:
-            <span id="winNumber"> will be pulled </span></p>
+            <span id="guessesLeft"> will be pulled </span></p>
             
             <p>Previous Guesses:
             <span id="previousGuessed">will be pulled</span></p>
