worked on answerArray

--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
             <h1>and the Magical Word</h1>
             <p> Press any key to get started!</p>
             <p>Current Word:
-            <span id="answerArray"> will be pulled</span></p>
+            <span id="currentWord">word</span></p>
             <p>Number of Wins:
-            <span id="winNumber"> will be pulled </span></p>
-
+            <span id="numberOfWins">0</span></p>
             <p>Guesses Left:
-            <span id="guessesLeft"> will be pulled </span></p>
-            
+            <span id="numberOfGuessesLeft">10</span></p>
             <p>Previous Guesses:
-            <span id="previousGuessed">will be pulled</span></p>
+            <span id="previousGuesses">none</span></p>
         </div>
     </div>
 
