--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Harry Potter Word Game</title>
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Skranji" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -11,12 +12,10 @@
             <img class="Harry" src="./assets/images/HarryPotterLogo.png">
             <h1>and the Magical Word</h1>
             <p> Press any key to get started!</p>
-            <p>Current Word:
-            <span id="currentWord">word</span></p>
-            <p>Number of Wins:
-            <span id="numberOfWins">0</span></p>
-            <p>Guesses Left:
-            <span id="numberOfGuessesLeft">10</span></p>
+            <p>Current Word:</p>
+            <span id="currentWord">the dashes will go here</span></p>
+            <span id="numberOfWins">Number of Wins: </span></p>
+            <span id="numberOfGuessesLeft">Guesses Left: 10</span></p>
             <p>Previous Guesses:
             <span id="previousGuesses">none</span></p>
         </div>
