working on functionality

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <head>
     <title>Harry Potter Word Game</title>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+    <link rel = "stylesheet" href="./assets/css/reset.css">
     <link href="https://fonts.googleapis.com/css?family=Skranji" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
+
 </head>
 
 <body>
@@ -10,14 +12,15 @@
     <div class="bg">
         <div class="container">
             <img class="Harry" src="./assets/images/HarryPotterLogo.png">
-            <h1>and the Magical Word</h1>
-            <p> Press any key to get started!</p>
+            <h1>and the Magical Word</h1><br>
+            <p> Press any letter to get started!</p>
+            <br>
             <p>Current Word:</p>
-            <span id="currentWord">the dashes will go here</span></p>
-            <span id="numberOfWins">Number of Wins: </span></p>
-            <span id="numberOfGuessesLeft">Guesses Left: 10</span></p>
+            <span id="currentWord"></span></p><br></p>
+            <p>Number of Wins: <span id="numberOfWins"></span></p><br>
+            <p>Number of Guesses: <span id="numberOfGuessesLeft"></span></p><br>
             <p>Previous Guesses:
-            <span id="previousGuesses">none</span></p>
+            <span id="previousGuesses"></span></p>
         </div>
     </div>
 
